// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-chip should render check icon when no imageUrl is provided and showCheck is true 1`] = `
<modus-wc-chip aria-label="Check chip" show-check="true">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <svg class="mi-check mi-solid modus-wc-chip-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
      <path d="M9 18c-.26 0-.51-.1-.71-.29l-4-4A.996.996 0 1 1 5.7 12.3l3.29 3.29 9.29-9.29a.996.996 0 1 1 1.41 1.41l-10 10c-.2.2-.45.29-.71.29Z"></path>
    </svg>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with content in the primary slot 1`] = `
<modus-wc-chip aria-label="Slotted chip">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <span>
      Slot content
    </span>
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with custom props 1`] = `
<modus-wc-chip active="true" aria-label="Custom chip" custom-class="test-class" size="lg" variant="outline">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-lg modus-wc-chip modus-wc-chip--active modus-wc-chip--outline test-class" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with default props 1`] = `
<modus-wc-chip aria-label="Default chip">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with disabled attribute 1`] = `
<modus-wc-chip aria-label="Disabled chip" disabled="true">
  <!---->
  <button aria-disabled="true" aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip modus-wc-chip--disabled" disabled="" tabindex="0" type="button">
  </button>
</modus-wc-chip>
`;

exports[`modus-wc-chip should render with image avatar when imageUrl is provided 1`] = `
<modus-wc-chip aria-label="Chip with avatar" image-url="test.jpg">
  <!---->
  <button aria-label="chip" class="modus-wc-btn modus-wc-btn-md modus-wc-chip" tabindex="0" type="button">
    <modus-wc-avatar alt="chip" aria-label="chip" class="modus-wc-chip-avatar-container" custom-class="modus-wc-chip-avatar false" img-src="test.jpg"></modus-wc-avatar>
  </button>
</modus-wc-chip>
`;
